import { createLocalVue, mount } from '@vue/test-utils';
import Vuex from 'vuex';
import SubmitValues from '@/components/pages/donation_form/SubmitValues.vue';
import { NS_BANKDATA, NS_ADDRESS, NS_PAYMENT } from '@/store/namespaces';
import { AddressTypeModel, addressTypeName } from '@/view_models/AddressTypeModel';

const localVue = createLocalVue();
localVue.use( Vuex );

const getWrapper = ( addressType: AddressTypeModel ) => {
	return mount(SubmitValues, {
		localVue,
		propsData: {
			trackingData: {
				bannerImpressionCount: 1,
				impressionCount: 5,
			},
			campaignValues: {
				campaign: 'nicholas',
				keyword: 'cage',
			},
		},
		store: new Vuex.Store({
			modules: {
				[ NS_ADDRESS ]: {
					namespaced: true,
					state: {
						addressType: addressType,
						values: {
							firstName: 'Victor',
							lastName: 'van Doom',
							salutation: 'Herr',
							title: 'Dr.',
							street: 'Untere Straße 5',
							postcode: '08114',
							city: 'Haasenstadt',
							country: 'DE',
							email: 'doom@untergang.biz',
						},
					},
					getters: {
						willGetNewsletter() { return true; },
						willGetReceipt() { return true; },
					},
				},
				[ NS_BANKDATA ]: {
					namespaced: true,
					state: {
						values: {
							iban: 'DE12500105170648489890',
							bic: 'INGDDEFFXXX',
						},
					},
				},
				[ NS_PAYMENT ]: {
					namespaced: true,
					state: {
						values: {
							amount: '2349',
							interval: '3',
							type: 'BEZ',
						},
					},
				},
			},
		}),
	});
};

describe( 'SubmitValues.vue', () => {
	it( 'renders input fields for ANON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.ANON );
		expect( wrapper.element ).toMatchSnapshot();
	} );

	it( 'renders input fields for EMAIL address type', () => {
		const wrapper = getWrapper( AddressTypeModel.EMAIL );
		expect( wrapper.element ).toMatchSnapshot();
	} );

	it( 'renders input fields for PERSON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.PERSON );
		expect( wrapper.element ).toMatchSnapshot();
	} );

	it( 'renders the amount as an integer for ANON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.ANON );
		expect( ( wrapper.find( 'input[name=amount]' ).element as HTMLInputElement ).value ).toBe( '2349' );
	} );

	it( 'renders the amount as an integer for EMAIL address type', () => {
		const wrapper = getWrapper( AddressTypeModel.EMAIL );
		expect( ( wrapper.find( 'input[name=amount]' ).element as HTMLInputElement ).value ).toBe( '2349' );
	} );

	it( 'renders the amount as an integer for PERSON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.PERSON );
		expect( ( wrapper.find( 'input[name=amount]' ).element as HTMLInputElement ).value ).toBe( '2349' );
	} );

	it( 'renders the address type as string for ANON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.ANON );
		expect( ( wrapper.find('input[name=addressType]' ).element as HTMLInputElement ).value ).toBe(
			addressTypeName( AddressTypeModel.ANON )
		);
	} );

	it( 'renders the address type as string for EMAIL address type', () => {
		const wrapper = getWrapper( AddressTypeModel.EMAIL );
		expect( ( wrapper.find( 'input[name=addressType]' ).element as HTMLInputElement ).value ).toBe(
			addressTypeName( AddressTypeModel.EMAIL )
		);
	} );

	it( 'renders the address type as string for PERSON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.PERSON );
		expect( ( wrapper.find( 'input[name=addressType]' ).element as HTMLInputElement ).value ).toBe(
			addressTypeName( AddressTypeModel.PERSON )
		);
	} );

	it( 'sends tracking values for ANON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.ANON );

		expect( ( wrapper.find( 'input[name=bImpCount]' ).element as HTMLInputElement ).value ).toBe( '1' );
		expect( ( wrapper.find( 'input[name=impCount]' ).element as HTMLInputElement ).value ).toBe( '5' );
	} );

	it( 'sends tracking values for EMAIL address type', () => {
		const wrapper = getWrapper( AddressTypeModel.EMAIL );

		expect( ( wrapper.find( 'input[name=bImpCount]' ).element as HTMLInputElement ).value ).toBe( '1' );
		expect( (wrapper.find( 'input[name=impCount]' ).element as HTMLInputElement ).value ).toBe( '5' );
	} );

	it( 'sends tracking values for PERSON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.PERSON );

		expect( ( wrapper.find( 'input[name=bImpCount]' ).element as HTMLInputElement ).value ).toBe( '1' );
		expect( ( wrapper.find( 'input[name=impCount]' ).element as HTMLInputElement ).value ).toBe( '5' );
	} );

	it( 'sends campaign values for ANON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.ANON );

		expect( ( wrapper.find( 'input[name=piwik_campaign]' ).element as HTMLInputElement ).value).toBe( 'nicholas' );
		expect( ( wrapper.find( 'input[name=piwik_kwd]' ).element as HTMLInputElement ).value).toBe( 'cage' );
	} );

	it( 'sends campaign values for EMAIL address type', () => {
		const wrapper = getWrapper( AddressTypeModel.EMAIL );

		expect( ( wrapper.find( 'input[name=piwik_campaign]' ).element as HTMLInputElement ).value ).toBe( 'nicholas' );
		expect( ( wrapper.find( 'input[name=piwik_kwd]' ).element as HTMLInputElement ).value ).toBe( 'cage' );
	} );

	it( 'sends campaign values for PERSON address type', () => {
		const wrapper = getWrapper( AddressTypeModel.PERSON );

		expect( ( wrapper.find( 'input[name=piwik_campaign]' ).element as HTMLInputElement ).value ).toBe( 'nicholas' );
		expect( ( wrapper.find( 'input[name=piwik_kwd]' ).element as HTMLInputElement ).value ).toBe( 'cage' );
	} );
} );